# thanatos-mcp

./: LICENSE  README.md  pyproject.toml
demo/: demo_scenario.md  setup_demo.sh
docs/: ATTACK_FLOW.md  DISCLOSURE.md
src/thanatos/: __init__.py  config.py  memory_store.py  server.py
src/thanatos/parasite/: __init__.py  persistence.py  profiler.py  propagator.py  stego.py
tests/: test_thanatos.py
